<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Songs You May Like</string>
    <string name="create_button">Create</string>
    <string name="play_list_name_empty">Enter playlist name</string>
    <string name="play_list_exists">Playlist %s already exists</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_media_title">Create new %s</string>
    <string name="create_media_message">Enter %s name:</string>
    <string name="edit_audio">Edit audio</string>
    <string name="ok">OK</string>
    <string name="play_list">playlist</string>
    <string name="artist">artist</string>
    <string name="please_wait">Please wait…</string>
    <string name="all_songs">All Songs</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_adding_date">Sort by adding date</string>
    <string name="sort_by_artist_name">Sort by artist name</string>
    <string name="edit">Edit</string>
    <string name="report">Report wrong url</string>
    <string name="report_wrong_url_dialog">Enter some message, what is wrong with this song. It will help to fix the
        problem.
    </string>
    <string name="playing_now_title">Playing Now</string>
    <string name="play_lists">Playlists</string>
    <string name="create_play_list_hint">Enter playList name</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_playlists_title">Select playlists where to add the song</string>
    <string name="select_playlist">Select playlists</string>
    <string name="enter_audio_name">Enter audio name</string>
    <string name="enter_artist_name">Enter artist name</string>
    <string name="update_album_art">Update album art</string>
    <string name="genres">Genres</string>
    <string name="mood">Mood</string>
    <string name="sort_by_popularity">Sort by popularity</string>
    <string name="countries">Countries</string>
    <string name="search_internet_help_toast1">Tap on</string>
    <string name="search_internet_help_toast2">to search songs on the Internet</string>
    <string name="shuffle">Shuffle</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="name">Name</string>
    <string name="url_loading_text">Retrieving preview url…</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="no_music_found">No music found…</string>
    <string name="no_albums_found">No albums found…</string>
    <string name="no_artists_found">No artists found…</string>
    <string name="no_countries_found">No countries found…</string>
    <string name="no_mood_found">No mood found…</string>
    <string name="no_genres_found">No genres found…</string>
    <string name="no_songs_found">No songs found…</string>
    <string name="update">Update</string>
    <string name="retry">Retry</string>
    <string name="suggested">Suggested</string>
    <string name="your_songs">Your songs</string>
    <string name="download_failed">Download failed</string>
    <string name="sdcard_error">Sdcard is not mounted</string>
    <string name="download">Download</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
</resources>
